k8s/apps/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    app: frontend
    component: ui
